k8s/apps/tools/docuseal/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docuseal
  namespace: docuseal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "DocuSeal"
    gethomepage.dev/description: "Open source document signing"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "docuseal.png"
    gethomepage.dev/href: "https://docuseal.item.fyi"
    gethomepage.dev/siteMonitor: "https://docuseal.item.fyi"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=docuseal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`docuseal.item.fyi`)
      services:
        - name: docuseal
          port: 80
  tls: {}
